@@ -51,8 +51,10 @@ class RomWidget : public Widget, public CommandSender
     void toggleBreak(int disasm_line);
     void setPC(int disasm_line);
     void runtoPC(int disasm_line);
+    void disassemble(int disasm_line);
     void patchROM(int disasm_line, const string& bytes,
                   Common::Base::Fmt base);
+    uInt16 getAddress(int disasm_line);
 
   private:
     RomListWidget*  myRomList{nullptr};
